--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "flux": "^2.1.1",
     "font-awesome": "^4.6.3",
     "font-awesome-loader": "^1.0.0",
     "imports-loader": "^0.6.5",
